# agentforge-clinical-copilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT.md  COSTS.md  DEMO_SCRIPT.md  Dockerfile  Dockerfile.test  EVIDENCE.md  INTERVIEW_PREP.md  PATIENT_DASHBOARD_MIGRATION.md  PRESEARCH.md  README.md  REFLECTIONS.md  SETUP.md  SOCIAL_POST.md  THREAT_MODEL.md  USERS.md  W1_COSTS.md  W2_ARCHITECTURE.md  W2_COSTS.md  W2_DEMO_SCRIPT.md  W3_DEMO_SCRIPT.md  W3_SOCIAL_POST.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint-wrapper.sh  railway.json
agent-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
agent-service/evals/: README.md  results.md  run.py
agent-service/evals/redteam_runs/: README.md
agent-service/evals/redteam_runs/20260511T210348Z/: _summary.json  campaign_cross_patient_451b7c69-fa43-4e18-ac1a-75d659e5a5bf.json
agent-service/evals/redteam_runs/20260511T212149Z/: _summary.json  campaign_cost_amplification_d1b07efd-2cab-4cf5-b948-779f177bea27.json  campaign_cross_patient_1d911d66-c3e7-49de-872f-e10f69e29488.json  campaign_indirect_injection_77f6684a-dd9c-4f11-96b1-8162c1c659cc.json
agent-service/evals/redteam_runs/20260511T213300Z/: _summary.json  campaign_indirect_injection_f0c0534a-a964-4584-b9ff-9d171c84efe8.json
agent-service/evals/redteam_runs/20260511T213802Z/: _summary.json  campaign_cost_amplification_11265121-0708-4371-aae8-aa1d4ad0ed06.json  campaign_cross_patient_99e92772-c72a-47f2-b38d-1eb9eb117ed9.json  campaign_indirect_injection_e9e2fab5-a874-407e-b767-6b12276d97ed.json
agent-service/evals/redteam_runs/20260511T223132Z/: _summary.json  (+1 more)
agent-service/evals/w2/: __init__.py  adversarial_loader.py  baseline.json  cases.py  experiments.py  judge.py  replay.py  rubric.py  runner.py  transport.py
agent-service/evals/w2/adversarial_findings/: README.md  (+1 more)
agent-service/fixtures/: README.md  cohort_smoke.py  make_sample_intake_form.js  make_sample_lab_pdf.js
agent-service/fixtures/cohort-test-pack/: README.md
agent-service/src/copilot/: __init__.py  adversarial_visibility.py  main.py  orchestrator.py  settings.py  visibility.py
agent-service/src/redteam/: __init__.py  auto_promote.py  coverage.py  demo_documentation.py  documentation.py  judge.py  messages.py  orchestrator.py  red_team.py  replay.py  run_campaign.py  signals.py  target.py
agent-service/tests/: test_eval_runner.py  test_matcher.py  test_patient_context_middleware.py  test_redaction.py  test_redteam_auto_promote.py  test_redteam_coverage.py  test_redteam_documentation.py  test_redteam_judge.py  test_redteam_orchestrator.py  test_redteam_replay.py  test_redteam_signals.py  test_retriever.py  test_routing.py  test_schemas.py  test_verification.py  test_verifier_adversarial.py  test_vision_helpers.py  test_vulns_mirror_drift.py
agent-service/vulns/: .MIRROR_README.md  VULN-0001.md  VULN-0002.md  VULN-0003.md  VULN-0004.md
agent-service/vulns/_pending/: VULN-0003.md  VULN-0005.md
(+182 files in other folders)
