[project]
name = "copilot"
version = "0.1.0"
description = "Clinical Co-Pilot agent service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "httpx>=0.27",
    "redis>=5.2",
    "python-dotenv>=1.0",
    # Observability — Langfuse SDK; wired up at Thursday deliverable
    "langfuse>=2.55",
    # W2 — multimodal evidence agent. pdfplumber is the ground-truth
    # bbox source for the citation overlay (the vision model never
    # decides coordinates, see W2_ARCHITECTURE.md §1).
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
