[project]
name = "copilot"
version = "0.1.0"
description = "Clinical Co-Pilot agent service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "httpx>=0.27",
    "redis>=5.2",
    "python-dotenv>=1.0",
    # Observability — Langfuse SDK; wired up at Thursday deliverable
    "langfuse>=2.55",
    # W2 — multimodal evidence agent. pdfplumber is the ground-truth
    # bbox source for the citation overlay (the vision model never
    # decides coordinates, see W2_ARCHITECTURE.md §1).
    "pdfplumber>=0.11",
    # W2 — hybrid RAG. BM25 is in-memory and dependency-free; Voyage
    # and Cohere come in via optional extras so the deploy can run
    # in a degraded BM25-only mode if those vendor keys are missing.
    "rank-bm25>=0.2.2",
    # W2 — supervisor + worker orchestration. The graph wiring is
    # contained to copilot.workers.graph; routing logic and node
    # bodies live in pure-function modules so they remain testable
    # without spinning up the LangGraph runtime.
    "langgraph>=0.2",
]

[project.optional-dependencies]
# W2 dense retrieval + rerank. Optional so a deploy without these
# keys still runs in BM25-only mode (the retriever logs a warning
# and returns top-k from BM25 alone — see W2_ARCHITECTURE.md §3).
rag-dense = [
    "voyageai>=0.3",
    "cohere>=5.13",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
